syntax = "proto3";

option csharp_namespace = "AutoParts.Web.Protos";

import public "common.proto";

package Order;

service GrpcOrderService {
  rpc CreateOrder (CreateOrderRequest) returns (Common.ServiceResponse);
}

message CreateOrderRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string street_address = 4;
  string street_address_second_line = 5;
  string city = 6;
  string region = 7;
  string zip_code = 8;
  string comment = 9;
  int64 country_id = 10;
  bool save_shipping_info = 11;
  repeated OrderItem order_items = 12;
}

message OrderItem {
  int64 auto_part_id = 1;
  int32 quantity = 2;
}
